fix: fix tab spacing issue

--- a/src/shared/components/Tab/Tab.module.scss
+++ b/src/shared/components/Tab/Tab.module.scss
@@ -2,9 +2,9 @@
 @import '../../styles/colors.scss';
 
 .tab {
-  border-style: solid;
+  // border-style: solid;
 
-  border-width: 1px;
+  // border-width: 1px;
 
   padding: 0px;
   margin: 0px;
