--- a/src/shared/components/Tab/TabItem/TabItem.module.scss
+++ b/src/shared/components/Tab/TabItem/TabItem.module.scss
@@ -7,7 +7,8 @@
   padding: $s3;
 
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
+  margin-left: -2px;
 
   @include emulate-button();
 }
